fix scrollbar color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,12 @@ body {
     background-color: black;
     font-family: sans-serif;
 }
+
+::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(to right bottom, #F38A15, #F45C56);
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 0px;
+}
